<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/settings_background_light">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:minHeight="56dp"
        app:title="@string/settings_title"
        app:titleTextAppearance="@style/ToolbarTitle"
        app:titleTextColor="@color/toolbar_title_settings_light" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_dark_theme"
        style="@style/SettingsItem"
        android:text="@string/dark_theme"
        app:thumbTint="@color/switch_thumb_selector"
        app:trackTint="@color/switch_track_selector" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_share_app"
        style="@style/SettingsItem"
        android:text="@string/share_app"
        android:drawableEnd="@drawable/ic_share"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_write_to_support"
        style="@style/SettingsItem"
        android:text="@string/write_to_support"
        android:drawableEnd="@drawable/ic_support"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_user_agreement"
        style="@style/SettingsItem"
        android:text="@string/user_agreement"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground" />

</LinearLayout>
