<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_background_light"
    android:padding="@dimen/screen_padding">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:minHeight="56dp"
        app:title="@string/playlist_maker"
        app:titleTextAppearance="@style/ToolbarTitle"
        app:titleTextColor="?attr/toolbarTitleColor"
        app:contentInsetStart="16dp"
        app:contentInsetEnd="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_search"
        style="@style/ButtonBig"
        android:layout_marginTop="24dp"
        android:text="@string/search"
        app:icon="@drawable/ic_search" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_library"
        style="@style/ButtonBig"
        android:layout_marginTop="@dimen/button_spacing"
        android:text="@string/library"
        app:icon="@drawable/ic_library" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_settings"
        style="@style/ButtonBig"
        android:layout_marginTop="@dimen/button_spacing"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings" />

</LinearLayout>
