<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/libraryFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.playlistmakerr.presentation.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_playerFragment"
            app:destination="@id/playerFragment" />
    </fragment>

    <fragment
        android:id="@+id/libraryFragment"
        android:name="com.example.playlistmakerr.presentation.library.LibraryFragment"
        android:label="@string/library"
        tools:layout="@layout/fragment_library">
        <action
            android:id="@+id/action_libraryFragment_to_playerFragment"
            app:destination="@id/playerFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.playlistmakerr.presentation.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/playerFragment"
        android:name="com.example.playlistmakerr.presentation.player.PlayerFragment"
        android:label=""
        tools:layout="@layout/fragment_player" />

</navigation>
